--- a/main.tex
+++ b/main.tex
@@ -1,6 +1,13 @@
 %% ----------------------------------------------------------------
 %% main.tex -- MAIN FILE (the one that you compile with LaTeX)
 %% ----------------------------------------------------------------
+%
+%
+% LaTeX main file example for UTEC thesis format.
+% Created by Victor Murray in collaboration with Oscar Ramos and Juan Carlos Barbaran.
+% June, 2021
+%
+%
 
 \documentclass[a4paper, 12pt, oneside]{tesisutec}
 
