--- a/secciones/capitulo1.tex
+++ b/secciones/capitulo1.tex
@@ -35,12 +35,6 @@
   búsqueda, análisis y uso de la información estará en ventaja sobre otros, lo
   cual le permitirá, sin duda, desarrollarse con éxito.
 
-  Continúe aquí el texto xxxxx
-  
-Inicie aquí el texto, utilizando sangría de 1.25 cm. en el primer
-párrafo. Continúe el segundo párrafo.
-
-Continúe el segundo párrafo
 
 \section{Primer subtítulo}
 
@@ -70,17 +64,19 @@ sus usuarios tener acceso a muchas fuentes de información. Para asegurar el
 acceso y uso de los servicios los usuarios requieren poseer una serie de
 habilidades que les permitan identificar, recuperar, manejar, discernir,
 organizar, utilizar y comunicar la información de manera eficaz para la toma de
-decisiones.
-
+decisiones. La relación entre $a$ y $b$ puede expresarse como
+%
 \begin{equation}
   \label{eq:1}
-  a+b=\sqrt{\frac{4}{3}}
+  a+b=\sqrt{\frac{4}{3}},
 \end{equation}
+%
+donde $a$ y $b$ son escalares.
 
 Entre las causas se pueden considerar la falta de tiempo asignado al taller,
 las limitaciones en cuanto a laboratorios, el poco personal, la falta de una
 correcta selección de los contenidos, así como, una calificación que asegure el
-cumplimiento de los objetivos.
+cumplimiento de los objetivos. Un ejemplo de cómo poner una figura se muestra en la Fig. \ref{fig:diagram2}, y es importante recordar la relación mostrada en \eqref{eq:1}.
 
 
 \begin{figure} 
