--- a/main.tex
+++ b/main.tex
@@ -79,12 +79,8 @@
 \input{secciones/capitulo4}
 \input{secciones/conclusiones}
 \input{secciones/recomendaciones} % sección opcional
+\input{secciones/anexos}% sección opcional
 
-%% ============================================================================
-% \appendix
-% \input{secciones/apendiceA}
-% \addtocontents{toc}{\vspace{2em}}
-% \backmatter
 
 %% ============================================================================
 \renewcommand{\bibname}{\large\bf{REFERENCIAS BIBLIOGR\'AFICAS}}
