--- a/secciones/capitulo2.tex
+++ b/secciones/capitulo2.tex
@@ -1,4 +1,4 @@
-\chapter{ANTECEDENTES}
+\chapter{MARCO TEÓRICO}
 
 Inicie aquí el texto, utilizando sangría de 1.25 cm. en el primer
 párrafo. Continúe el segundo párrafo.
